crates/ditto-checker/tests/golden/type-errors/duplicate_type_declaration_variable.ditto
module Test exports (..);



type Foo(a, a) = Foo(a);
